--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "alex-p14@bk.ru"
         }
     ],
-    "require": {}
+    "require": {
+        "webmozart/assert": "^1.11"
+    }
 }
